# openfigma

./: .gitignore  CLAUDE.md  README.md  audit_quality.py  pyproject.toml  take-screenshots.py  test_visual_output.py
.github/workflows/: ci.yml  publish.yml
diagrams/: case-study-1-headline.html  case-study-2-quote.html  case-study-3-metric-10x.html  case-study-4-metric-6x.html  case-study-5-cta.html  case-study-slide-1-cover.html  case-study-slide-2-headline.html  case-study-slide-3-quote.html  case-study-slide-4-metric.html  case-study-slide-5-conversion.html  case-study-template.html  diagram-1-cursor-style.html  diagram-2-cursor-style.html  diagram-3-cursor-style.html  diagram-4-cursor-style.html
examples/: basic.py  event_poster.py  linkedin_carousel.py  linkedin_carousel_v10.py  linkedin_posts.py  premium_templates.py
openfigma/: __init__.py  advanced.py  components.py  export.py
tests/: test_components.py
