[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfigma"
version = "2.0.0"
description = "Component-based graphics generation from JSON config"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Federico De Ponte", email = "federico@scaile.tech"}
]
keywords = ["graphics", "components", "json", "html", "png", "charts", "diagrams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/federicodeponte/openfigma"
Repository = "https://github.com/federicodeponte/openfigma"

